feat: align active state effects for images

--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -69,7 +69,7 @@ const { Content } = await entry.render();
             <a
               href={image.src}
               data-fancybox="gallery"
-              class="group overflow-hidden rounded-xl bg-primary-200 focus-visible:outline-none focus-visible:ring-4 focus-visible:ring-primary-200"
+              class="bg-grey-100 focus-visible:outline-3 group overflow-hidden rounded-xl focus-visible:outline-none focus-visible:outline-offset-2 focus-visible:outline-primary-900 "
             >
               <Picture
                 src={image.src}
@@ -78,7 +78,7 @@ const { Content } = await entry.render();
                 width={400}
                 height={350}
                 quality={80}
-                class="aspect-[4/3] object-cover shadow-lg transition-opacity group-hover:opacity-60 group-focus:opacity-60 "
+                class="aspect-[4/3] object-cover shadow-lg transition-transform duration-300 group-hover:scale-110"
               />
             </a>
           ))}
