refactor: add link class

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -6,7 +6,7 @@
     & Entwicklung <a
       href="https://andreasremdt.com"
       target="_blank"
-      class="rounded-sm text-gray-900 underline hover:text-primary-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-900"
+      class="link"
       rel="nofollow noreferrer noopener">Andreas Remdt</a
     >.
   </p>
