--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -22,8 +22,10 @@ import Layout from "@/layout/default.astro";
 
     <p>
       Andreas Remdt<br />Neudorfer Straße 40<br />79541 D-Lörrach<br /><a
-        href="mailto:info@regio-lions.com">info@regio-lions.com</a
+        href="mailto:info@regio-lions.com"
+        class="link">info@regio-lions.com</a
       ><br /><a
+        class="link"
         href="https://andreasremdt.com/"
         target="_blank"
         rel="noopener nofollow noreferrer">https://andreasremdt.com</a
@@ -85,7 +87,12 @@ import Layout from "@/layout/default.astro";
       1. Beschreibung und Umfang der Datenverarbeitung
     </h3>
     <p>
-      Diese Webseite wird über die Firma <a href="https://vercel.com">Vercel</a>
+      Diese Webseite wird über die Firma <a
+        href="https://vercel.com"
+        target="_blank"
+        rel="noopener nofollow noreferrer"
+        class="link">Vercel</a
+      >
       betrieben, welche kostenloses Hosting für statische Webseiten anbietet. Die
       Natur dieser Seiten ist, das keine dynamischen Skripte die Aktivitäten oder
       Daten des Besuchers aufzeichnen, während er auf der Webseite ist. Es ist jedoch
@@ -101,8 +108,11 @@ import Layout from "@/layout/default.astro";
     </ul>
     <p>
       Der Leo-Club hat keinerlei Zugriffsmöglichkeiten auf die genannten Daten
-      und verweist auf die <a href="https://vercel.com/docs/security"
-        >Datenschutzerklärung von Vercel</a
+      und verweist auf die <a
+        href="https://vercel.com/docs/security"
+        target="_blank"
+        rel="noopener nofollow noreferrer"
+        class="link">Datenschutzerklärung von Vercel</a
       >, in welcher sich weitere Informationen zu den eventuell gesammelten
       Daten befinden.
     </p>
@@ -212,7 +222,8 @@ import Layout from "@/layout/default.astro";
     </p>
     <p>
       Senden Sie uns dazu bitte eine E-Mail (nicht über das Kontaktformular) an <a
-        href="mailto:info@region-lions.com">info@region-lions.com</a
+        href="mailto:info@regio-lions.com"
+        class="link">info@regio-lions.com</a
       >
     </p>
     <p>
