--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -17,8 +17,10 @@ import Layout from "@/layout/default.astro";
 
     <p>
       Andreas Remdt<br />Neudorfer Straße 40<br />79541 D-Lörrach<br /><a
-        href="mailto:info@regio-lions.com">info@regio-lions.com</a
+        href="mailto:info@regio-lions.com"
+        class="link">info@regio-lions.com</a
       ><br /><a
+        class="link"
         href="https://andreasremdt.com/"
         target="_blank"
         rel="noopener nofollow noreferrer">https://andreasremdt.com</a
