--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -21,6 +21,10 @@
     @apply mb-1 block font-medium text-gray-900;
   }
 
+  .link {
+    @apply rounded-sm font-medium text-primary-900 hover:underline focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-900;
+  }
+
   .textbox {
     @apply h-12 w-full rounded-md border border-gray-300 px-4 shadow-sm transition-colors hover:border-gray-500 focus-visible:outline focus-visible:outline-2 focus-visible:-outline-offset-2 focus-visible:outline-primary-900 focus-visible:ring-4 focus-visible:ring-primary-100 aria-[invalid]:border-red-400 aria-[invalid]:shadow-red-100 aria-[invalid]:focus-visible:outline-red-400 aria-[invalid]:focus-visible:ring-red-100;
   }
