--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,13 +17,10 @@ const news = await getNews(3);
     </h1>
     <p class="mb-8 text-xl sm:w-2/3 md:w-1/2">
       Regio Lions ist ein Verbund von mehreren Lions Clubs aus dem Dreiländereck
-      Deutschland, Schweiz und Frankreich mit dem Ziel, gemeinsame Aktivities,
-      wie z. B. den 3-Länderlauf oder einen Stand bei "Em Bebbi sy Jazz!" in
-      Basel, zu organisieren.
+      Deutschland, Schweiz und Frankreich mit dem Ziel, gemeinsame Aktivitäten,
+      wie z. B. den 3-Länderlauf oder trinationale Jugendcamps, zu organisieren.
     </p>
-    <a href="/news" class="btn btn-primary">
-      Unsere letzten Aktivitäten &rarr;
-    </a>
+    <a href="/news" class="btn btn-primary"> Unsere Aktivitäten &rarr; </a>
 
     <div
       class="right-0 mt-8 flex gap-4 md:absolute md:top-40 md:mt-0 md:w-2/5 md:gap-8 lg:top-48"
@@ -87,10 +84,14 @@ const news = await getNews(3);
     <div class="flex flex-col gap-8 md:flex-row md:gap-16">
       <div class="md:w-3/5">
         <p class="mb-8 text-xl">
-          Lions Clubs International ist eine weltweite Vereinigung freier
-          Menschen, die in freundschaftlicher Verbundenheit bereit sind, sich
-          den gesellschaftlichen Problemen unserer Zeit zu stellen und
-          uneigennützig an ihrer Lösung mitzuwirken.
+          <a
+            href="https://www.lionsclubs.org/"
+            class="link"
+            target="_blank"
+            rel="noopener noreferrer nofoloow">Lions Clubs International</a
+          > ist eine weltweite Vereinigung von Menschen, die in freundschaftlicher
+          Verbundenheit bereit sind, sich den gesellschaftlichen Problemen unserer
+          Zeit zu stellen und uneigennützig an ihrer Lösung mitzuwirken.
         </p>
         <p class="mb-8">
           Schon in der Vergangenheit gab es Kontaktversuche der Clubs der 3
@@ -116,11 +117,11 @@ const news = await getNews(3);
           teilnehmende Clubs aus den 3 Ländern
         </li>
         <li class="md:text-xl">
-          <span class="h3 block md:mb-2">100</span>
+          <span class="h3 block md:mb-2">über 50</span>
           durchgeführte Aktionen seit Gründung
         </li>
         <li class="md:text-xl">
-          <span class="h3 block md:mb-2">40.000 €</span>
+          <span class="h3 block md:mb-2">mehr als 40.000 €</span>
           an gesammelten Spenden
         </li>
       </ul>
@@ -140,9 +141,9 @@ const news = await getNews(3);
   <section class="py-16 md:py-32 lg:py-48">
     <h2 class="h2 mb-8">Unsere Ziele</h2>
     <p class="mb-12 text-xl md:w-2/3 lg:w-1/2">
-      Wie jede Organisation verfolgen auch wir gewisse Ziele, welche wir mit
-      unseren Aktivitäten umsetzen. Diese Ziele definieren und motivieren uns
-      für den ehrenamtlichen Einsatz.
+      Wie jede Organisation verfolgen wir mit unserem Engagement eine Reihe von
+      Zielen, welche uns motivieren und als Verbund definieren. Nachfolgend
+      finden Sie unsere 6 Hauptziele.
     </p>
 
     <ul class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
@@ -153,7 +154,7 @@ const news = await getNews(3);
       </li>
       <li>
         <h3 class="h3 mb-2">Grenzen überwinden</h3>
-        Wie der Lions Club International verfolgen auch wie die Verbesserung der
+        Wie der Lions Club International verfolgen auch wir die Verbesserung der
         Beziehungen zwischen den Völkern.
       </li>
       <li>
@@ -173,8 +174,8 @@ const news = await getNews(3);
       </li>
       <li>
         <h3 class="h3 mb-2">Kindern helfen</h3>
-        Wir erarbeiten Finanzmittel um ein zweisprachiges, trinationales Ferienlager
-        zu Gunsten von Kindern der Region zu finanzieren.
+        Wir erarbeiten Finanzmittel um ein zweisprachige, trinationale Ferienlager
+        zu Gunsten von Jugendlichen der Region zu finanzieren.
       </li>
     </ul>
   </section>
