--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -5,10 +5,11 @@ import Layout from "@/layout/default.astro";
 
 <Layout>
   <Hero title="Kontakt aufnehmen">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor esse
-    tenetur, blanditiis excepturi minus expedita labore distinctio. Odio cumque
-    maiores aliquid consectetur aliquam labore quidem asperiores magni culpa,
-    amet ut!
+    Wenn Sie mit uns Kontakt aufnehmen möchten können Sie dies über das
+    Kontaktformular tun. Sollten Sie eine direkte E-Mail bevorzugen, können Sie
+    uns unter <a href="mailto:info@regio-lions.com" class="link"
+      >info@regio-lions.com</a
+    > schreiben. Wir werden uns schnellst möglich bei Ihnen melden.
   </Hero>
 
   <div class="flex flex-col gap-x-12 lg:flex-row">
