refactor: prefer `let` over `const`

--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -10,7 +10,7 @@ interface Props {
   external?: boolean;
 }
 
-const { title, date, image, href, external } = Astro.props;
+let { title, date, image, href, external } = Astro.props;
 ---
 
 <article
