--- a/src/components/news-preview.astro
+++ b/src/components/news-preview.astro
@@ -15,7 +15,7 @@ interface Props {
   };
 }
 
-const { title, date, image, excerpt, href } = Astro.props;
+let { title, date, image, excerpt, href } = Astro.props;
 ---
 
 <article class="flex flex-col gap-6 lg:flex-row lg:gap-12">
