--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -1,4 +1,5 @@
 ---
+import Alert from "@/components/alert.astro";
 import Hero from "@/components/hero.astro";
 import Layout from "@/layout/default.astro";
 ---
@@ -13,7 +14,7 @@ import Layout from "@/layout/default.astro";
   </Hero>
 
   <div class="flex flex-col gap-x-12 lg:flex-row">
-    <form action="" method="post" class="lg:w-2/3" data-form>
+    <form method="POST" class="shrink-0 lg:w-2/3" data-form>
       <div class="mb-4 flex flex-col gap-4 sm:flex-row md:mb-8 md:gap-8">
         <div class="sm:w-1/2">
           <label for="firstname" class="label">Vorname</label>
@@ -86,28 +87,16 @@ import Layout from "@/layout/default.astro";
       <button type="submit" class="btn btn-primary">Nachricht senden</button>
     </form>
 
-    <div role="alert" class="mt-7 lg:w-1/3">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        aria-hidden="true"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="mb-2 h-8 w-8 text-green-600 lg:mb-4"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
-        ></path>
-      </svg>
-      <h2 class="h3 mb-2 lg:mb-4">Vielen Dank für Ihre Nachricht!</h2>
-      <p>
-        Ihre Nachricht wurde erfolgreich an uns gesendet. Wir werden uns
-        demnächst bei Ihnen melden.
-      </p>
-    </div>
+    <Alert
+      title="Vielen Dank für Ihre Nachricht!"
+      type="success"
+      description="Ihre Nachricht wurde erfolgreich an uns gesendet. Wir werden uns demnächst bei Ihnen melden."
+    />
+    <Alert
+      title="Das hat leider nicht geklappt..."
+      type="error"
+      description="Leider konnte Ihre Nachricht nicht gesendet werden. Bitte versuchen Sie es später erneut."
+    />
   </div>
 </Layout>
 
@@ -117,6 +106,9 @@ import Layout from "@/layout/default.astro";
     "input, textarea",
   ) as NodeListOf<HTMLInputElement>;
   let button = form.querySelector('button[type="submit"]') as HTMLButtonElement;
+  let alerts = document.querySelectorAll(
+    "[data-alert]",
+  ) as NodeListOf<HTMLTemplateElement>;
 
   form.setAttribute("novalidate", "novalidate");
   form.setAttribute("aria-assertive", "polite");
@@ -140,6 +132,28 @@ import Layout from "@/layout/default.astro";
     }
   }
 
+  async function send() {
+    button.setAttribute("disabled", "");
+    button.textContent = "Bitte warten...";
+
+    let [success, error] = alerts;
+    let response = await fetch("/api/send-email", {
+      method: "POST",
+      body: new FormData(form),
+    });
+
+    if (response.ok) {
+      form.insertAdjacentHTML("afterend", success.innerHTML);
+      button.textContent = "Nachricht gesendet";
+    } else {
+      document.querySelector<HTMLDivElement>('[role="alert"]')?.remove();
+
+      form.insertAdjacentHTML("afterend", error.innerHTML);
+      button.removeAttribute("disabled");
+      button.textContent = "Nachricht senden";
+    }
+  }
+
   function handleSubmit(event: SubmitEvent) {
     event.preventDefault();
 
@@ -152,7 +166,7 @@ import Layout from "@/layout/default.astro";
     if (firstInvalid) {
       firstInvalid.focus();
     } else {
-      console.log("send email");
+      send();
     }
   }
 
