--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -6,15 +6,15 @@
 
 @layer components {
   .btn {
-    @apply inline-flex h-12 items-center rounded-md border-2 px-6 font-medium transition-colors focus-visible:outline-none focus-visible:ring-4;
+    @apply inline-flex h-12 items-center rounded-md border-2 px-6 font-medium transition-colors focus-visible:outline-none focus-visible:ring-4 disabled:cursor-wait;
   }
 
   .btn-primary {
-    @apply border-primary-900 bg-primary-900 text-white hover:bg-white hover:text-primary-900 focus-visible:bg-white focus-visible:text-primary-900 focus-visible:ring-primary-100;
+    @apply border-primary-900 bg-primary-900 text-white focus-visible:bg-white focus-visible:text-primary-900 focus-visible:ring-primary-100 enabled:hover:bg-white enabled:hover:text-primary-900 disabled:border-gray-500 disabled:bg-gray-500;
   }
 
   .btn-secondary {
-    @apply border-primary-900 bg-white text-primary-900 hover:bg-primary-900 hover:text-white focus-visible:bg-primary-900 focus-visible:text-white focus-visible:ring-primary-200;
+    @apply border-primary-900 bg-white text-primary-900 focus-visible:bg-primary-900 focus-visible:text-white focus-visible:ring-primary-200 enabled:hover:bg-primary-900 enabled:hover:text-white disabled:border-gray-500 disabled:text-gray-500;
   }
 
   .label {
