feat: improve card preview

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -187,7 +187,7 @@ let news = await getNews(3);
       letzter Zeit gemacht haben.
     </p>
 
-    <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3">
+    <div class="grid grid-cols-1 gap-8 md:grid-cols-3">
       {
         news.map((entry) => (
           <Card
