--- a/src/pages/news/[...page].astro
+++ b/src/pages/news/[...page].astro
@@ -7,7 +7,7 @@ import Layout from "@/layout/default.astro";
 import { getNews } from "@/lib/utils";
 
 export let getStaticPaths = (async ({ paginate }) => {
-  let news = await getNews();
+  let news = await getNews(false);
 
   return paginate(news, { pageSize: 6 });
 }) satisfies GetStaticPaths;
