fix: anchor styles in prose

--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -59,7 +59,7 @@ let { Content } = await entry.render();
     }
 
     <div
-      class="prose max-w-none prose-img:rounded-xl prose-img:shadow-xl prose-video:w-full prose-video:rounded-xl prose-video:shadow-xl"
+      class="prose max-w-none prose-a:rounded-sm prose-a:text-primary-900 prose-a:no-underline hover:prose-a:underline focus-visible:prose-a:outline focus-visible:prose-a:outline-2 focus-visible:prose-a:outline-offset-2 prose-img:rounded-xl prose-img:shadow-xl prose-video:w-full prose-video:rounded-xl prose-video:shadow-xl"
     >
       <Content />
     </div>
