feat: add social links, title, description

--- a/src/pages/clubs.astro
+++ b/src/pages/clubs.astro
@@ -7,7 +7,10 @@ import Layout from "@/layout/default.astro";
 let countries = await getCollection("clubs");
 ---
 
-<Layout>
+<Layout
+  title="Clubs"
+  description="Derzeit zählen wir 17 Clubs zu unserer Gemeinschaft. Erfahren Sie mehr über die einzelnen Clubs."
+>
   <Hero title="Teilnehmende Clubs">
     Derzeit zählen wir 17 Clubs zu unserer Gemeinschaft. Jeder Club bringt sich
     mit individuellen Ideen und Einsatzbereitschaft seiner Mitglieder ein und
