--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -3,7 +3,10 @@ import Hero from "@/components/hero.astro";
 import Layout from "@/layout/default.astro";
 ---
 
-<Layout>
+<Layout
+  title="Datenschutz"
+  description="Diese Datenschutzerklärung klärt Sie über die Art, den Umfang und Zweck der Verarbeitung von personenbezogenen Daten auf."
+>
   <Hero title="Datenschutzerklärung" />
 
   <div class="md:w-2/3">
