--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -3,11 +3,14 @@ import Hero from "@/components/hero.astro";
 import Layout from "@/layout/default.astro";
 ---
 
-<Layout>
+<Layout
+  title="Impressum"
+  description="Das Impressum der Regio Lions mit Informationen zu unseren Kontaktdaten"
+>
   <Hero title="Impressum">
-    Eine gemeinsame Seite der Lions Clubs im Dreiländereck CH/DE/FR zum
-    Informationsaustausch über Veranstaltungen und Activities der teilnehmenden
-    Clubs.
+    Eine gemeinsame Seite der Lions Clubs im Dreiländereck Deutschland /
+    Frankreich / Schweiz zum Informationsaustausch über Veranstaltungen und
+    Activities der teilnehmenden Clubs.
   </Hero>
 
   <div class="md:w-2/3">
