--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,11 @@ import { getNews } from "@/lib/utils";
 let news = await getNews(false, 3);
 ---
 
-<Layout>
+<Layout
+  title="Home"
+  description="Regio Lions ist ein Verbund von verschiedenen Lions Clubs aus dem Dreiländereck Deutschland / Frankreich / Schweiz"
+  image="https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2014/vitra_0.jpg?updatedAt=1707158771718"
+>
   <section
     class="relative py-16 before:absolute before:bottom-32 before:right-0 before:-z-10 before:aspect-square before:w-64 before:rounded-full before:bg-fuchsia-100 before:blur-3xl after:absolute after:-bottom-48 after:right-32 after:-z-10 after:aspect-square after:w-72 after:rounded-full after:bg-purple-100 after:blur-3xl md:py-32"
   >
