--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -4,7 +4,10 @@ import Hero from "@/components/hero.astro";
 import Layout from "@/layout/default.astro";
 ---
 
-<Layout>
+<Layout
+  title="Kontakt"
+  description="Nehmen Sie Kontakt mit uns auf und schreiben Sie uns eine E-Mail."
+>
   <Hero title="Kontakt aufnehmen">
     Wenn Sie mit uns Kontakt aufnehmen möchten können Sie dies über das
     Kontaktformular tun. Sollten Sie eine direkte E-Mail bevorzugen, können Sie
