--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -17,7 +17,11 @@ let { entry } = Astro.props;
 let { Content } = await entry.render();
 ---
 
-<Layout>
+<Layout
+  title={entry.data.title}
+  description={entry.data.excerpt}
+  image={entry.data.image?.src}
+>
   <Hero title={entry.data.title}>{entry.data.excerpt} </Hero>
 
   <div class="mx-auto md:w-2/3">
