--- a/src/layout/default.astro
+++ b/src/layout/default.astro
@@ -36,6 +36,7 @@ const { title, description, image } = Astro.props;
     <link rel="icon" href="/favicon.ico" sizes="32x32" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
   <body class="leading-relaxed text-gray-600">
     <a
