refactor: move font face to base style, rename path

--- a/src/pages/clubs.astro
+++ b/src/pages/clubs.astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import Card from "@/components/card.astro";
 import Hero from "@/components/hero.astro";
-import Layout from "@/layout/default.astro";
+import Layout from "@/layouts/default.astro";
 
 let countries = await getCollection("clubs");
 ---
