--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import { Picture } from "astro:assets";
 import Hero from "@/components/hero.astro";
-import Layout from "@/layout/default.astro";
+import Layout from "@/layouts/default.astro";
 import { getNews } from "@/lib/utils";
 
 export async function getStaticPaths() {
