--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
 import Hero from "@/components/hero.astro";
-import Layout from "@/layout/default.astro";
+import Layout from "@/layouts/default.astro";
 ---
 
 <Layout
