--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -1,7 +1,7 @@
 ---
 import Alert from "@/components/alert.astro";
 import Hero from "@/components/hero.astro";
-import Layout from "@/layout/default.astro";
+import Layout from "@/layouts/default.astro";
 ---
 
 <Layout
