--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,6 +7,7 @@ import { Picture } from "astro:assets";
 >
   <a
     href="/"
+    aria-label="home"
     class="rounded-md focus-visible:bg-primary-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2"
   >
     <Picture
@@ -58,22 +59,18 @@ import { Picture } from "astro:assets";
   >
     <a
       class="rounded-sm font-medium text-gray-900 transition-colors hover:text-primary-900 focus-visible:text-primary-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-900"
-      tabindex="0"
       href="/">Home</a
     >
     <a
       class="rounded-sm font-medium text-gray-900 transition-colors hover:text-primary-900 focus-visible:text-primary-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-900"
-      tabindex="0"
       href="/news">News</a
     >
     <a
       class="rounded-sm font-medium text-gray-900 transition-colors hover:text-primary-900 focus-visible:text-primary-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-900"
-      tabindex="0"
       href="/clubs">Clubs</a
     >
     <a
       class="inline-flex items-center gap-x-2 rounded-sm font-medium text-gray-900 transition-colors hover:text-primary-900 focus-visible:text-primary-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-900"
-      tabindex="0"
       href="https://www.3laenderlauf.org/"
       target="_blank"
       rel="noopener nofollow noreferrer"
