--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -114,7 +114,7 @@ import Layout from "@/layouts/default.astro";
   ) as NodeListOf<HTMLTemplateElement>;
 
   form.setAttribute("novalidate", "novalidate");
-  form.setAttribute("aria-assertive", "polite");
+  form.setAttribute("aria-live", "polite");
 
   function validate(input: HTMLInputElement) {
     if (!input.checkValidity() && !input.hasAttribute("aria-invalid")) {
