--- a/src/components/news-preview.astro
+++ b/src/components/news-preview.astro
@@ -33,7 +33,7 @@ let { title, date, image, excerpt, href } = Astro.props;
       />
     ) : (
       <span
-        aria-hidden="true"
+        role="presentation"
         class="flex h-64 w-full flex-col items-center justify-center rounded-xl bg-gray-100 text-sm text-gray-500 shadow-lg lg:max-w-72"
       >
         <svg
