--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -11,7 +11,7 @@
     >.
   </p>
 
-  <nav class="space-x-4 md:space-x-8">
+  <nav class="space-x-4 md:space-x-8" aria-label="fusszeilennavigation">
     <a
       href="/impressum"
       class="rounded-sm transition-colors hover:text-primary-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-900"
