--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "@/components/header.astro";
 import Footer from "@/components/footer.astro";
+import { trimDescription } from "@/lib/utils";
 import "@/styles/base.css";
 
 interface Props {
@@ -12,23 +13,23 @@ interface Props {
 const { title, description, image } = Astro.props;
 ---
 
-<html lang="de" class="scroll-smooth">
+<html lang="de" class="scroll-smooth" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="Andreas Remdt" />
-    <meta name="description" content={description} />
+    <meta name="description" content={trimDescription(description)} />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#f9c910" />
 
     <meta property="og:title" content={`${title} | Regio Lions`} />
-    <meta property="og:description" content={description} />
+    <meta property="og:description" content={trimDescription(description)} />
     {image ? <meta property="og:image" content={image} /> : null}
     <meta property="og:site_name" content="Regio Lions" />
     <meta property="og:url" content={Astro.url} />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content={`${title} | Regio Lions`} />
-    <meta name="twitter:description" content={description} />
+    <meta name="twitter:description" content={trimDescription(description)} />
     {image ? <meta name="twitter:image" content={image} /> : null}
 
     <title>{title} | Regio Lions</title>
