--- a/src/components/news-preview.astro
+++ b/src/components/news-preview.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "astro:assets";
-import {} from "astro";
+import NoImage from "@/components/no-image.astro";
 import { formatDate } from "@/lib/utils";
 
 interface Props {
@@ -28,33 +28,17 @@ let { title, date, image, excerpt, href } = Astro.props;
         width={300}
         quality={80}
         height={300}
-        class="h-64 w-full rounded-xl object-cover shadow-lg lg:aspect-square"
+        class="h-64 w-full rounded-xl object-cover shadow-lg lg:aspect-square lg:h-auto"
         pictureAttributes={{ class: "w-full lg:max-w-72" }}
       />
     ) : (
-      <span
-        role="presentation"
-        class="flex h-64 w-full flex-col items-center justify-center rounded-xl bg-gray-100 text-sm text-gray-500 shadow-lg lg:max-w-72"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 512 512"
-          width="48"
-          height="48"
-          class="mb-2 text-gray-300"
-        >
-          <path
-            fill="currentColor"
-            d="M448 80c8.8 0 16 7.2 16 16V415.8l-5-6.5-136-176c-4.5-5.9-11.6-9.3-19-9.3s-14.4 3.4-19 9.3L202 340.7l-30.5-42.7C167 291.7 159.8 288 152 288s-15 3.7-19.5 10.1l-80 112L48 416.3l0-.3V96c0-8.8 7.2-16 16-16H448zM64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm80 192a48 48 0 1 0 0-96 48 48 0 1 0 0 96z"
-          />
-        </svg>
-        Kein Bild verfügbar
-      </span>
+      <NoImage class="aspect-square w-full lg:max-w-72" />
     )
   }
   <div class="flex flex-1 flex-col items-start">
-    <time datetime={date.toISOString()} class="text-sm text-gray-500"
-      >{formatDate(date)}</time
+    <time
+      datetime={date.toISOString()}
+      class="text-sm text-gray-500 dark:text-gray-400">{formatDate(date)}</time
     >
     <h2 class="h4 mb-6 mt-1">
       {title}
