--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -39,7 +39,9 @@ const { title, description, image } = Astro.props;
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
-  <body class="leading-relaxed text-gray-600">
+  <body
+    class="leading-relaxed text-gray-600 dark:bg-gray-900 dark:text-gray-100"
+  >
     <a
       href="#content"
       class="btn btn-primary absolute -top-1 left-1/2 z-10 -translate-x-1/2 -translate-y-full rounded-t-none transition-transform focus:translate-y-0"
