--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ let news = await getNews(true, 3);
   image="https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2014/vitra_0.jpg?updatedAt=1707158771718"
 >
   <section
-    class="relative py-16 before:absolute before:bottom-32 before:right-0 before:-z-10 before:aspect-square before:w-64 before:rounded-full before:bg-fuchsia-100 before:blur-3xl after:absolute after:-bottom-48 after:right-32 after:-z-10 after:aspect-square after:w-72 after:rounded-full after:bg-purple-100 after:blur-3xl md:py-32"
+    class="relative py-16 before:absolute before:bottom-32 before:right-0 before:-z-10 before:aspect-square before:w-64 before:rounded-full before:bg-fuchsia-100 before:blur-3xl after:absolute after:-bottom-48 after:right-32 after:-z-10 after:aspect-square after:w-72 after:rounded-full after:bg-purple-100 after:blur-3xl md:py-32 dark:before:bg-fuchsia-900 dark:after:bg-purple-950"
   >
     <h1 class="h1 mb-8 md:w-3/5">
       Länderübergreifendes Engagement für Deutschland, Frankreich und die
