--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -55,7 +55,9 @@ let { Content } = await entry.render();
                   d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
                 />
               </svg>
-              <p class="text-sm text-gray-500">{entry.data.image.caption}</p>
+              <p class="text-sm text-gray-500 dark:text-gray-100">
+                {entry.data.image.caption}
+              </p>
             </figcaption>
           ) : null}
         </figure>
@@ -63,7 +65,7 @@ let { Content } = await entry.render();
     }
 
     <div
-      class="prose max-w-none prose-a:rounded-sm prose-a:text-primary-900 prose-a:no-underline hover:prose-a:underline focus-visible:prose-a:outline focus-visible:prose-a:outline-2 focus-visible:prose-a:outline-offset-2 prose-img:rounded-xl prose-img:shadow-xl prose-video:w-full prose-video:rounded-xl prose-video:shadow-xl"
+      class="prose max-w-none prose-a:rounded-sm prose-a:text-primary-900 prose-a:no-underline hover:prose-a:underline focus-visible:prose-a:outline focus-visible:prose-a:outline-2 focus-visible:prose-a:outline-offset-2 prose-img:rounded-xl prose-img:shadow-xl prose-video:w-full prose-video:rounded-xl prose-video:shadow-xl dark:text-gray-100 dark:prose-a:text-primary-200"
     >
       <Content />
     </div>
