--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,5 +1,5 @@
 <footer
-  class="relative mx-auto mt-16 flex max-w-7xl flex-col items-center justify-center p-8 text-center text-sm before:absolute before:bottom-0 before:left-0 before:-z-10 before:aspect-square before:w-64 before:rounded-full before:bg-indigo-100 before:blur-3xl md:flex-row md:justify-between md:text-left dark:before:bg-indigo-900"
+  class="relative mx-auto mt-16 flex max-w-7xl flex-col items-center justify-center p-8 text-center text-sm before:absolute before:bottom-0 before:left-0 before:-z-10 before:aspect-square before:w-64 before:rounded-full before:bg-indigo-100 before:blur-3xl md:flex-row md:justify-between md:text-left dark:before:bg-indigo-900 print:hidden"
 >
   <p class="mb-4 md:mb-0">
     &copy; {new Date().getFullYear()} Regio Lions. Alle Rechte vorbehalten. Design
