--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -17,7 +17,7 @@ import Layout from "@/layouts/default.astro";
   </Hero>
 
   <div class="flex flex-col gap-x-12 lg:flex-row">
-    <form method="POST" class="shrink-0 lg:w-2/3" data-form>
+    <form method="POST" class="shrink-0 lg:w-2/3 print:hidden" data-form>
       <div class="mb-4 flex flex-col gap-4 sm:flex-row md:mb-8 md:gap-8">
         <div class="sm:w-1/2">
           <label for="firstname" class="label">Vorname</label>
